# LetsBuild

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  MISTAKES.md  Makefile  README.md  docker-compose.yml  letsbuild.yaml.example  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  quality-auditor.md  research-agent.md  skill-author.md
.claude/commands/: add-layer.md  add-skill.md  arena-build.md  arena-duel.md  review-output.md  test-jd.md
.claude/rules/: agents.md  arena.md  models.md  pipeline.md  security.md  skills.md  testing.md
.github/workflows/: ci.yml
arena-context/: ARENA_BUILD_PLAN.md
arena-context/agents/: arena-builder.md
arena-context/tasks/: phase-a-models.md  phase-b-agents.md  phase-c-scoring.md  phase-d-spectator.md  phase-e-challenges.md  phase-f-controller.md  phase-g-cli-gateway.md  phase-h-config-docs.md
docs/: EXECUTION_PLAN_100_STEPS.md  GOTCHAS.md
docs/architecture/: ARCHITECTURE.md  DATA_FLOW.md
docs/contributing/: SKILL_AUTHORING.md
docs/decisions/: ADR-001-three-source-architecture.md  ADR-TEMPLATE.md
letsbuild/: __init__.py  cli.py  logging.py
letsbuild/architect/: adr_generator.py  engine.py  memory_advisor.py  skill_parser.py  validation_planner.py
letsbuild/arena/: __init__.py  challenges.py  cli.py  controller.py  scoring.py  spectator.py  worktree.py
letsbuild/content/: engine.py
letsbuild/forge/: base_agent.py  context.py  executor.py  retry.py  tool_scoping.py  tools.py  topology.py
letsbuild/gateway/: arena_ws.py  mcp_server.py  telegram_bot.py
letsbuild/harness/: config.py  gates.py  llm_client.py  middleware.py  sandbox.py
letsbuild/hooks/: post_code_gen.py  post_review.py  pre_publish.py
letsbuild/intake/: engine.py  fetcher.py  skill_extractor.py
letsbuild/intelligence/: cache.py  coordinator.py
letsbuild/matcher/: ats_predictor.py  engine.py  gap_analysis.py
letsbuild/memory/: consolidate.py  distill.py  hnsw_index.py  judge.py  storage.py
letsbuild/models/: __init__.py  architect_models.py  arena_models.py  config_models.py  content_models.py  (+7 more)
sandbox/: Dockerfile
skills/: agentic-ai.skill.md  api-backend.skill.md  autonomous.skill.md  blockchain.skill.md  cv.skill.md  data-eng.skill.md  data-science.skill.md  embedded-iot.skill.md  fullstack.skill.md  llm-finetune.skill.md  ml-pipeline.skill.md  mobile.skill.md  nlp.skill.md  platform.skill.md  realtime.skill.md  taxonomy.json
tests/: conftest.py  test_cli.py  test_logging.py
(+128 files in other folders)
